Fixes images stretching on different devices
- updates to improve the quality of images on different devices.

--- a/app/assets/stylesheets/page_sections/_image_layout.scss
+++ b/app/assets/stylesheets/page_sections/_image_layout.scss
@@ -1,36 +1,23 @@
 .image-layout {
-  @include media($desktop) {
-    display: flex;
+  @include span-columns(12);
+
+  .image-wrapper {
+    overflow: hidden;
+    position: relative;
+    @include span-columns(4);
+
+
+    @include media($tablet-and-smaller) {
+      @include span-columns(12);
+      float: unset;
+      max-height: 200px;
+    }
   }
 
   .image_on_right,
   .image_on_left {
-    @include media($desktop) {
-      flex: 0 0 33%;
-    }
-
-    @include media($tablet) {
-      text-align: center;
-    }
-
-    @include media($mobile) {
-      position: relative;
-    };
-
     img {
-      @include media($desktop) {
-        width: 100%;
-      }
-
-      @include media($tablet) {
-        width: auto;
-        max-height: 300px;
-      }
-
-      @include media($mobile) {
-        width: 100%;
-        max-height: 200px;
-      }
+      width: 100%;
     }
   }
 
@@ -67,6 +54,7 @@
     }
 
     @include media($mobile) {
+      position: relative;
       margin-top: -100px !important;
     }
   }
